<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    android:layout_marginHorizontal="10dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:elevation="2dp"
    app:cardUseCompatPadding="false"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUserProfile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            tools:src="@tools:sample/avatars"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/purple_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvRepositoryName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            tools:text="@string/app_name"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRepositoryDesc"
            app:layout_constraintStart_toEndOf="@id/imgUserProfile"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvRepositoryOwnerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tvByName"
            app:layout_constraintTop_toBottomOf="@id/tvRepositoryName"
            app:layout_constraintStart_toStartOf="@id/tvRepositoryName"
            app:layout_constraintEnd_toEndOf="@id/tvRepositoryName"/>

        <TextView
            android:id="@+id/tvRepositoryDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            tools:text="@string/tvLipsum"
            app:layout_constraintTop_toBottomOf="@+id/tvRepositoryOwnerName"
            app:layout_constraintStart_toStartOf="@id/tvRepositoryName"
            app:layout_constraintEnd_toEndOf="@id/tvRepositoryName"/>

        <ImageView
            android:id="@+id/imgSize"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginVertical="4dp"
            android:contentDescription="@string/tvRepository"
            android:src="@drawable/ic_outline_repo"
            app:layout_constraintTop_toBottomOf="@+id/tvRepositoryDesc"
            app:layout_constraintStart_toStartOf="@id/tvRepositoryName"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvRepositorySize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@android:color/black"
            tools:text="@tools:sample/us_zipcodes"
            app:layout_constraintTop_toTopOf="@+id/imgSize"
            app:layout_constraintBottom_toBottomOf="@+id/imgSize"
            app:layout_constraintStart_toEndOf="@+id/imgSize"/>

        <ImageView
            android:id="@+id/imgStarred"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/tvStarred"
            android:src="@drawable/ic_outline_starred"
            app:layout_constraintTop_toTopOf="@+id/imgSize"
            app:layout_constraintBottom_toBottomOf="@+id/imgSize"
            app:layout_constraintStart_toEndOf="@id/tvRepositorySize"/>

        <TextView
            android:id="@+id/tvRepositoryStarred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@android:color/black"
            tools:text="@tools:sample/us_zipcodes"
            app:layout_constraintTop_toTopOf="@+id/imgSize"
            app:layout_constraintBottom_toBottomOf="@+id/imgSize"
            app:layout_constraintStart_toEndOf="@+id/imgStarred"/>

        <ImageView
            android:id="@+id/imgLanguage"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/tvLanguage"
            android:src="@drawable/ic_language"
            app:layout_constraintTop_toTopOf="@+id/imgSize"
            app:layout_constraintBottom_toBottomOf="@+id/imgSize"
            app:layout_constraintStart_toEndOf="@+id/tvRepositoryStarred"/>

        <TextView
            android:id="@+id/tvRepositoryLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@android:color/black"
            tools:text="@string/tvLanguage"
            app:layout_constraintTop_toTopOf="@+id/imgSize"
            app:layout_constraintBottom_toBottomOf="@+id/imgSize"
            app:layout_constraintStart_toEndOf="@+id/imgLanguage"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>